tests/paczka1/small_fuzzy/65521342.err
Error in line 1: mTLqa S975 58,6
Error in line 8: arlI8Iw A331 14,91
Error in line 6: 0ENj7Hnby A437 204,6
